fix: sftp fetchToLocal signature; type-safe rule conversion; parquet reader type